--- a/.github/workflows/deploy-sepolia.yml
+++ b/.github/workflows/deploy-sepolia.yml
@@ -1,38 +1,52 @@
-name: Deploy Sepolia
+name: deploy
 
 on:
   workflow_dispatch:
+  push:
+    branches: [ "main" ]
+    paths:
+      - "contracts/**"
+      - "deploy/**"
+      - "scripts/**"
+      - "hardhat.config.ts"
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    timeout-minutes: 20
+
     env:
-      # RPC / keys (должны быть добавлены как GitHub Actions Secrets)
-      ALCHEMY_KEY: ${{ secrets.ALCHEMY_KEY }}
-      RPC_URL: ${{ secrets.ALCHEMY_SEPOLIA_URL }}
+      SEPOLIA_RPC_URL: ${{ secrets.SEPOLIA_RPC_URL }}
       PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
-      ETHERSCAN_KEY: ${{ secrets.ETHERSCAN_KEY }}
-      # DEX config (можно задать как secrets или оставить дефолты из кода)
       UNISWAP_ROUTER: ${{ secrets.UNISWAP_ROUTER }}
       WETH: ${{ secrets.WETH }}
-      USDC: ${{ secrets.USDC }}
+      POOL_FEE: ${{ secrets.POOL_FEE }}
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Setup Node
+      - name: Use Node 20
         uses: actions/setup-node@v4
         with:
           node-version: 20
 
-      - name: Install deps
-        run: npm ci || npm i
+      - name: Install
+        run: npm ci
 
       - name: Compile
         run: npx hardhat compile
 
-      - name: Deploy to Sepolia
-        run: npx hardhat deploy --tags sepolia --network sepolia
+      - name: Warm up RPC (getChainId)
+        run: npx hardhat run scripts/ping-rpc.ts --network sepolia
+
+      - name: Deploy to Sepolia (with retries)
+        uses: nick-fields/retry@v3
+        with:
+          max_attempts: 3
+          retry_on: error
+          timeout_minutes: 8
+          command: npx hardhat deploy --tags sepolia --network sepolia
 
       - name: Upload deployments
         if: always()
@@ -40,4 +54,3 @@ jobs:
         with:
           name: deployments-sepolia
           path: deployments/sepolia
-          if-no-files-found: ignore
