--- a/.github/workflows/deploy-sepolia.yml
+++ b/.github/workflows/deploy-sepolia.yml
@@ -32,7 +32,14 @@ jobs:
           node-version: 20
 
       - name: Install
-        run: npm ci
+        run: |
+          if [ -f package-lock.json ]; then
+            npm ci
+          else
+            echo "package-lock.json not found, falling back to npm install"
+            npm install
+          fi
+
 
       - name: Compile
         run: npx hardhat compile
