--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,6 +3,12 @@ name: CI
 on:
   push:
     branches: [ "main" ]
+    paths:
+      - "contracts/**"
+      - "test/**"
+      - "hardhat.config.ts"
+      - "package.json"
+      - ".github/workflows/main.yml"
   pull_request:
     branches: [ "main" ]
   workflow_dispatch:
@@ -12,9 +18,24 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+
       - uses: actions/setup-node@v4
         with:
           node-version: '20'
-      - run: npm ci || npm i
-      - run: npx hardhat compile
-      - run: npx hardhat test
+
+      - name: Install
+        run: |
+          if [ -f package-lock.json ]; then
+            npm ci
+          else
+            npm install
+          fi
+
+      - name: Ensure hardhat chai matchers
+        run: npm i -D @nomicfoundation/hardhat-chai-matchers
+
+      - name: Compile
+        run: npx hardhat compile
+
+      - name: Run tests
+        run: npx hardhat test
