--- a/.env.example
+++ b/.env.example
@@ -2,10 +2,10 @@
 RPC_URL_SEPOLIA=
 DEPLOYER_PRIVATE_KEY=
 
-# Uniswap & Tokens (Sepolia defaults — можно не менять для сборки/тестов)
-UNISWAP_ROUTER=0x68B3465833Fb72A70ecDF485E0e4C7bD8665Fc45
-USDC=0x6e3dDf2c1d5d5AA0AD9cf94c2Cc56b88A1d50b5D
-WETH=0xd0A1E359811322d97991E03f863a0C30C2cF029C
+# Uniswap & Tokens (Sepolia)
+UNISWAP_ROUTER=0x3bFA4769FB09eefC5a80d6E87c3B9C650f7Ae48E
+USDC=0x1c7D4B196Cb0C7B01d743Fbc6116a902379C7238
+WETH=0xfff9976782d46cc05630d1f6ebab18b2324d6b14
 POOL_FEE=3000
 
 # Batching / Fees
